--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>About</title>
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 
 <header>
@@ -15,8 +15,8 @@
         <ul>
             <nav>
                 <li><a href="index.html">About</a></li>
-                <li><a href="portfolio.html">Portfolio</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="assets/portfolio.html">Portfolio</a></li>
+                <li><a href="assets/contact.html">Contact</a></li>
             </nav>
         </ul>   
 </header>
@@ -27,7 +27,7 @@
                 <strong>About Me</strong>
             </div>
             <div id="pic">
-                <img src="images/Pooladian Ben 2662 5x7.jpg">
+                <img src="assets/images/Pooladian Ben 2662 5x7.jpg">
                 <div id="text1">
                     <p>Hi, my name is Ben. I grew up in Roseville, Minnesota and stayed there until I moved to St. Paul for college. I graduating from Hamline University in 2009 and my first job out of college was at a store called Game Crazy. I worked a few other retail jobs, including being a Bank Teller at Wells Fargo before I got a job at The Art Institutes. I started working in their accounting department and moved over to financial aid after 1 year. I got a job at Rasmussen College 2 years later and have been there for the past 2 years.</p>
                     <P>i am a big fan of all Star Treks. I also love playing board games with friends and binge watching Netflix.</P>
